# civilwarmap-data

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml  run_modern_1860.py  us_state_1860_nspop_proj_data.csv  us_state_1863_nspop_proj_data.csv  worklog.md
output/: us_state_1860_modern_data.csv  us_state_1860_modern_data_flipped.csv
